# clang-tool-example

./: CMakeLists.txt  README.md
cmake/: FindClang.cmake
src/: CMakeLists.txt  test.cpp
